# prompt-lab

./: .env.example  .gitignore  .kiroignore  AGENT_UPGRADE.md  DATA_STRUCTURE_GUIDE.md  EVALUATION_RULES.md  EVAL_GUIDE.md  EVAL_UNIFIED.md  EXAMPLE_WORKFLOW.md  KNOWN_ISSUES.md  MANUAL_EVAL_GUIDE.md  OUTPUT_PARSER_USAGE.md  PROJECT_STRUCTURE.md  README.md  README_EVAL.md  RULES_QUICK_REFERENCE.md  backward_compatibility_report.json  pyproject.toml  requirements.txt  run_spec_tests.sh  run_tests.py
agents/: asr_cleaner.yaml  mem0_l1_summarizer.yaml
config/: AGENT_REGISTRY_DESIGN_SUMMARY.md  README.md  agent_registry.yaml
data/: high_score_cases.csv  mem0_l1.eval.sample.csv  mem0_l1.eval.test.csv  mem0_l1_summarizer.compare.20251203_170456.csv  mem0_l1_summarizer.compare.rules.csv  mem0_l1_summarizer.eval.20251203_170456.csv  mem0_l1_summarizer.manual_review.csv  mem0_l1_summarizer.manual_review.demo.csv  mem0_l1_summarizer.manual_review.final.csv  mem0_l1_summarizer.with_basic_rules.csv  mem0_l1_summarizer_compare.eval.20251203_173457.csv  mem0_l1_summarizer_compare.eval.20251203_173457.judge.csv  mem0_l1_summarizer_compare.eval.20251203_175528.csv  mem0_l1_summarizer_compare.eval.20251203_175528.judge.csv  mem0_l1_summarizer_compare.eval.20251203_195737.csv  mem0_l1_summarizer_compare.eval.20251203_195737.judge.csv  mem0_l1_summarizer_compare.eval.20251203_200322.csv  mem0_l1_summarizer_compare.eval.20251203_200322.judge.csv  mem0_l1_summarizer_compare.eval.20251203_200731.csv  mem0_l1_summarizer_compare.eval.20251203_200731.judge.csv  mem0_l1_summarizer_compare.eval.20251204_095050.csv  mem0_l1_summarizer_compare.eval.20251204_095050.judge.csv  mem0_l1_summarizer_compare.eval.20251204_100808.csv  mem0_l1_summarizer_compare.eval.20251204_100808.judge.csv  mem0_l1_summarizer_compare.eval.20251204_104524.csv  mem0_l1_summarizer_compare.eval.20251204_104524.judge.csv  mem0_l1_summarizer_compare.results.20251203_173344.csv  mem0_l1_summarizer_compare.results.20251203_200208.csv  mem0_l1_summarizer_compare.results.20251203_200702.csv  mem0_l1_summarizer_compare.rules.20251203_200247.csv  mem0_l1_summarizer_mem0_l1_v3.eval.20251203_173237.csv  mem0_l1_summarizer_mem0_l1_v3.eval.20251203_173237.judge.csv  mem0_l1_summarizer_mem0_l1_v3.eval.20251203_175441.csv  mem0_l1_summarizer_mem0_l1_v3.eval.20251203_175441.judge.csv  mem0_l1_summarizer_mem0_l1_v3.eval.20251203_200908.csv  mem0_l1_summarizer_mem0_l1_v3.eval.20251203_200908.judge.csv  mem0_l1_summarizer_mem0_l1_v3.results.20251203_173212.csv  mem0_l1_test01.csv  results.compare.csv  results.demo.csv  (+1 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  README.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  agent-migration-summary.md  agent-template-guide.md  big_thing_agent_guide.md  big_thing_cli_fix.md  big_thing_gpt4_issue_fix.md  examples-guide.md
examples/: README.md  api_agents_demo.py  api_async_execution_demo.py  api_config_demo.py  api_demo.py  api_documentation_demo.py  api_progress_query_demo.py  batch_aggregator_demo.py  batch_data_processor_demo.py  big_thing_demo.py  cli_demo.py  concurrent_error_handling_demo.py  concurrent_executor_demo.py  config_generator_demo.py  dependency_analyzer_demo.py  hot_reload_demo.py  import_big_thing_simple.py  pipeline_demo.py  pipeline_testset_loader_demo.py  progress_tracking_demo.py  sync_registry_demo.py  testset_loader_demo.py  testset_pipeline_integration_example.py
pipelines/: api_test_list_pipeline.yaml  customer_service_flow.yaml  new_test_pipeline.yaml  workflow_test.yaml
prompt_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompts/: analysis_agent.yaml  flow_demo.yaml  judge_v2.yaml  mem0_l1_v1.yaml  mem0_l1_v2.yaml
scripts/: README.md  README_MIGRATION.md  add_agent_metadata.py  agent_registry_patch.py  convert_templates.py  demo_fill_scores.py  demo_manual_eval.py  fix_doc_links.py  generate_performance_report.py  list_agents_by_category.py  migrate_config.py  migrate_data.py  migrate_structure.py  quick_eval.sh  reorganize_agents.py  rule_helper.py  run_eval_demo.sh  sync_agent_registry.py  test_backward_compatibility.py  validate_docs.py  validate_test_env.py  verify_agent_migration.py  verify_migration.py
src/: __main__.py  agent_registry.py  agent_registry.py.backup  agent_registry_v2.py  analyze_eval_results.py  baseline_cli.py  baseline_manager.py  batch_aggregator.py  chains.py  checkpoint_manager.py  code_executor.py  compatibility.py  concurrent_executor.py  config.py  data_manager.py  dependency_analyzer.py  error_handler.py  eval_llm_judge.py  eval_rules.py  model_converters.py  models.py  output_parser.py  paths.py  pipeline_config.py  rule_engine.py  (+16 more)
(+348 files in other folders)
